--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -410,7 +410,7 @@ section {
 .about .content h3 {
   font-weight: 700;
   font-size: 26px;
-  color: #728394;
+  color: #0563bb;
 }
 
 .about .content ul {
